# libcolumbus

./: .bzrignore  CMakeLists.txt  coding style.txt  gimp-commands.txt  hacking.txt  pch.cmake
cmake/: coverage.cmake  isclang.cc  pch.cmake  python.cmake
debian/: changelog  control  copyright  libcolumbus0-common.install  libcolumbus0-dev.dirs  libcolumbus0-dev.install  libcolumbus0.install  libcolumbus0.symbols  libcolumbus1.symbols  libcolumbus1v5.symbols  rules
include/: CMakeLists.txt  ColumbusCore.hh.in  ColumbusHelpers.hh  ColumbusSlow.hh  Corpus.hh  Document.hh  ErrorMatrix.hh  ErrorValues.hh  IndexMatches.hh  IndexWeights.hh  LevenshteinIndex.hh  MatchResults.hh  MatchRow.hh  Matcher.hh  MatcherStatistics.hh  ResultFilter.hh  ResultGatherer.hh  SearchParameters.hh  Trie.hh  Word.hh  WordList.hh  WordStore.hh  columbus.h  columbus.hh  columbus.pc.in  columbuscore.h  columbuscore.h.in  libcolumbus.pc.in
python/: CMakeLists.txt  _columbus.cc  columbus.cc  columbus.py
share/: CMakeLists.txt  esses.txt  latinAccentedLetterGroups.txt
src/: CMakeLists.txt  ColumbusCAPI.cc  ColumbusHelpers.cc  ColumbusSlow.cc  Corpus.cc  Document.cc  ErrorMatrix.cc  ErrorValues.cc  IndexMatches.cc  IndexWeights.cc  LevenshteinIndex.cc  MatchResults.cc  MatchRow.cc  Matcher.cc  MatcherStatistics.cc  ResultFilter.cc  ResultGatherer.cc  SearchParameters.cc  Trie.cc  Word.cc  WordList.cc  WordStore.cc  libcolumbus.map
src/pch/: columbus_pch.h
test/: AssertFailTest.cc  AssertSuccTest.cc  CAPITest.c  CMakeLists.txt  CorpusTest.cc  CreatePerformanceTest.cc  CustomErrorTest.cc  DocumentTest.cc  ErrorValuesTest.cc  HelpersTest.cc  IndexWeightsTest.cc  LevIndexTest.cc  LevScalabilityTest.cc  LevTrieTest.cc  MatchResultsTest.cc  MatcherTest.cc  ResultFilterTest.cc  SearchParametersTest.cc  TrieTest.cc  WordListTest.cc  WordStoreTest.cc  WordTest.cc  assert_fail_test.cc  assert_succ_test.cc  custom_error_test.cc  document_test.cc  lev_scalability_test.cc  levindex_test.cc  levtrie_test.cc  pythontest.py  word_test.cc  wordlist_test.cc
tools/: CMakeLists.txt  hudtest.cc  lowertable.cc  numberpad.cc  queryapp.cc  queryindex.cc  sctest.cc  singleword.cc
